[tool.poetry]
name = "qpyr"
version = "0.1.0"
description = "Create QR Codes."
authors = ["Sabih Hasan <17186450+sabih-h@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
Pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.2"
Pillow = "^10.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
