[tool.poetry]
name = "qpyr"
version = "0.1.16"
description = "Create QR Codes."
authors = ["Sabi"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["qr", "qrcode", "qrcode-generator"]

[tool.poetry.urls]
"Source" = "https://github.com/sabih-h/qpyr"
"Documentation" = "https://sabih-h.github.io/qpyr/"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
Pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.2"
Pillow = "^10.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
